# Agent-Commerce-Network

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
acp/: __init__.py  agent.py
acp/arbitration/: __init__.py  arbitrator.py
acp/contract/: __init__.py  manager.py
acp/llm/: __init__.py  qwen.py
acp/negotiation/: __init__.py  engine.py  strategies.py
acp/protocol/: __init__.py  messaging.py  models.py  types.py
acp/registry/: __init__.py  registry.py
acp/relationships/: __init__.py  arbitration_rel.py  commission.py  contract_rel.py  open_bounty.py  purchase.py  subscription.py  team_formation.py  verification.py
acp/reputation/: __init__.py  ratings.py  trust.py
acp/settlement/: __init__.py  ledger.py
acp/team/: __init__.py  formation.py
acp/verification/: __init__.py  verifier.py
demo/: app.py  competitive_analysis.py  single_agent_baseline.py  web_api.py
deploy/: aliyun_setup.md
docs/: UI_REFACTOR_SPEC.md  coagenta-prd.md  demo-scenario.md  demo-video-script.md  devpost-submission.md  hackathon-plan.md  hackathon-winning-demo-research.md  protocol-spec.md  scope-boundary.md
tests/: test_agent.py  test_arbitration.py  test_contract.py  test_demo_api.py  test_messaging.py  test_models.py  test_negotiation.py  test_registry.py  test_reputation.py  test_settlement.py  test_team.py  test_types.py  test_verification.py
web/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: agent-card.tsx  deal-timeline.tsx  page-header.tsx  reputation-chart.tsx  reputation-gauge.tsx  service-card.tsx  site-footer.tsx  stat-card.tsx  top-nav.tsx  (+2 more)
(+62 files in other folders)
